@@ -25,8 +25,9 @@
 [fix] Context Menu -> More -> Related Videos w/ Kodi 18
 [fix] Sign In/Sign Out causing crash with Kodi 18 nightlies
 [fix] Channel 'mine' caching
-[lang] Spanish strings |contrib: roliverosc|
-[lang] Greek strings |contrib: twilight0|
+[lang] es_es strings |contrib: roliverosc|
+[lang] el_gr strings |contrib: twilight0|
+[lang] nl_nl strings |contrib: Markman-B|
 
 6.0.2
 [fix] incorrectly raised 'Proxy is not running' error
